1.3 (unreleased)
================

- added ``remove`` method on queue.

- added helpers for setting up and tearing down Zope 3 functional tests
  (ftesting.py), and a discussion of how to write Zope 3 functional tests with
  layers (zope.app.testing.functional) in ftesting.txt.

- remove obsolete retry approach for success/failure callbacks
  (``completeStartedJobArguments``): it is now handled by retry policies.

- remove odd full-path self-references within the utils module.

- doc improvements and fixes (thanks to Zvezdan Petkovic and Gintautas
  Miliauskas).

1.2 (2008-06-20)
================

- made the log for finding an activated agent report the pertinent queue's oid
  as an unpacked integer, rather than the packed string blob. Use
  ``ZODB.utils.p64`` to convert back to an oid that the ZODB will recognize.

- Bugfix: in failing a job, the job thought it was in its old agent, and the
  ``fail`` call failed. This is now tested by the first example in new doctest
  ``catastrophes.txt``.

- jobs no longer default to a ``begin_by`` value of one hour after the
  ``begin_after``.  The default now is no limit.

- Made dispatcher much more robust to transaction errors and ZEO
  ClientDisconnected errors.

- Jobs now use an IRetryPolicy to decide what to do on failure within a job,
  within the commit of the result, and if the job is interrupted.  This allows
  support of transactional jobs, transactional jobs that critically must be
  run to completion, and non-transactional jobs such as communicating with an
  external service.

- The default retry policy supports retries for ClientDisconnected errors,
  transaction errors, and interruptions.

- ``job.txt`` has been expanded significantly to show error handling and the
  use of retry policies. New file ``catastrophes.txt`` shows handling of other
  catastrophes, such as interruptions to polling.

- job errors now go in the main zc.async.event log rather than in the